# restaurant-map

./: .gitignore  README.md  pyproject.toml  tailwind.config.js
data/: data.json
src/restaurant_map/: config.py  database.py  main.py  routes.py
src/restaurant_map/static/javascript/: map.js  sort.js
src/restaurant_map/static/src/: input.css
src/restaurant_map/templates/: about.html  details.html  main.html  tags_select.html
src/restaurant_map/templates/shared/: _base.html  _footer.html  _header.html
