[project]
name = "restaurant-map"
version = "0.1.0"
description = "Simple site for viewing and editing restaurants"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "tinydb",
    "pydantic-settings"
]

[project.scripts]
app = "restaurant_map:main.main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
